Sun Feb 24 23:40:15 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for BinaryOpNode.

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for OpAssignNode.

	* net/loveruby/cflat/compiler/TypeChecker.java: implement usual
	  arithmetic conversion for ++, --.

	* net/loveruby/cflat/compiler/TypeChecker.java: new entry point
	  TypeTable#check(AST).

Sun Feb 24 19:58:45 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj (SPACES): "\v" is invalid
	  escape sequence in JavaCC.

Sun Feb 24 15:31:24 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj (INTEGER): 0xUL is invalid.

	* net/loveruby/cflat/parser/Parser.jj (CHARACTER): 'aa' is
	  invalid.

	* net/loveruby/cflat/parser/Parser.jj: refactoring: insert spaces
	  after comma of character class.

Mon Feb 18 06:12:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java: TypeTable is
	  useless.

	* net/loveruby/cflat/compiler/Compiler.java: ditto.

Mon Feb 18 06:07:13 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (mustBeScalar):
	  checks if type is an integer, a pointer, or an array (previous
	  #mustBeScalarAlike definition).

	* net/loveruby/cflat/compiler/TypeChecker.java
	  (expectsSameInteger, expectsComparableScalars): return immediately
	  after first error.

	* net/loveruby/cflat/compiler/TypeChecker.java (PrefixOpNode,
	  SuffixOpNode): allow array parameter.

	* net/loveruby/cflat/type/Type.java: new method #isScalar.

	* net/loveruby/cflat/type/IntegerType.java: is a scalar.

	* net/loveruby/cflat/type/ArrayType.java: is a scalar.

	* net/loveruby/cflat/type/PointerType.java: is a scalar.

Mon Feb 18 05:35:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeChecker.java (checkCond): cond
	  expr might be an array.
